--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
+    <link rel="manifest" href="/manifest.json">
     <link rel="import" href="/src/test-pwa-app/test-pwa-app.html">
   </head>
   <body>
+
     <test-pwa-app></test-pwa-app>
 
     <style>
@@ -19,5 +21,6 @@
         margin: 0;
       }
     </style>
+
   </body>
 </html>
