--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>test-pwa</title>
     <meta name="description" content="Discovering Progressive Web App(s) by building one using Polymer 2, Service Workers etc.">
 
-    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="manifest" href="/manifest.json">
-    <link rel="import" href="/src/test-pwa-app/test-pwa-app.html">
+    <link rel="manifest" href="manifest.json">
+    <link rel="import" href="src/test-pwa-app/test-pwa-app.html">
   </head>
   <body>
 
