--- a/src/test-pwa-app.html
+++ b/src/test-pwa-app.html
@@ -1,45 +1,17 @@
-<link rel="import" href="../bower_components/shadycss/apply-shim.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-styles/shadow.html">
-<link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="views/image-list-view.html">
+<link rel="import" href="views/fragments/main-view.html">
 
 <dom-module id="test-pwa-app">
   <template>
     <style>
       :host {
-        @apply --shadow-elevation-2dp;
-
-        background: white;
+        background: #eeeeee;
         display: block;
         height: 100%;
-        margin: auto;
-        max-width: 960px;
-        overflow: auto;
       }
 
-      @media (min-width: 1025px) {
-        :host::-webkit-scrollbar {
-          background: transparent;
-          width: 0.75em;
-        }
-        :host::-webkit-scrollbar-thumb {
-          background: rgba(85, 85, 85, 0.25);
-        }
-        :host::-webkit-scrollbar-track {
-        }
-      }
-
-      h1 {
-        @apply --paper-font-display2;
-
-        line-height: 1em;
-        margin: 0;
-        padding: 1em;
-        text-align: center;
-      }
       paper-toast {
         font-size: 1em;
       }
@@ -48,9 +20,7 @@
       }
     </style>
 
-    <h1>Some pics that I like</h1>
-
-    <image-list-view></image-list-view>
+    <main-view></main-view>
 
     <paper-toast id="toast">
       <paper-button id="positiveButton" on-tap="_onToastPositiveButtonTapped"></paper-button>
@@ -58,10 +28,6 @@
   </template>
 
   <script>
-    /**
-     * @customElement
-     * @polymer
-     */
     class TestPwaApp extends Polymer.Element {
       static get is() {
         return 'test-pwa-app';
@@ -69,28 +35,6 @@
 
       _onToastPositiveButtonTapped() {
         window.location.reload(true);
-      }
-
-      connectedCallback() {
-        super.connectedCallback();
-        console.log('connectedCallback()');
-
-        this.addEventListener('tap', this._onItemTapped);
-      }
-
-      disconnectedCallback() {
-        super.disconnectedCallback();
-        console.log('disconnectedCallback()');
-
-        this.removeEventListener('tap', this._onItemTapped);
-      }
-
-      _onItemTapped(e) {
-        const origin = e.path[2];
-
-        if (origin.nodeName != 'IMAGE-LIST-ITEM') return;
-
-        console.log(origin);
       }
 
       ready() {
