[test-pwa-add] added basic fragment management

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <script>
       window.app = document.querySelector('test-pwa-app');
+      window.mainFragment = app.$.mainFragment;
+      window.splashFragment = app.$.splashFragment;
     </script>
 
     <style>
