--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>if (!window.customElements) { document.write('<!--'); }</script>
     <script type="text/javascript" src="bower_components/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <!--! do not remove -->
-<script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script><link rel="manifest" href="manifest.json"><link rel="import" href="src/test-pwa-app.html"></head><body><test-pwa-app></test-pwa-app><script>window.app=document.querySelector('test-pwa-app');</script><style>body{background:#eeeeee;height:100%;margin:0;}html{height:100%;}</style><noscript><style>noscript {
+<script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script><link rel="manifest" href="manifest.json"><link rel="import" href="src/test-pwa-app.html"></head><body><test-pwa-app></test-pwa-app><script>window.app=document.querySelector('test-pwa-app'),window.mainFragment=app.$.mainFragment,window.splashFragment=app.$.splashFragment;</script><style>body{background:#eeeeee;height:100%;margin:0;}html{height:100%;}</style><noscript><style>noscript {
           text-align: center;
         }
         noscript > div {
