--- a/src/core/services/five-hundred-px-service.html
+++ b/src/core/services/five-hundred-px-service.html
@@ -1,4 +1,4 @@
-<!-- <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 
 <dom-module id="five-hundred-px-service">
   <script>
@@ -6,10 +6,20 @@
       static get is() {
         return 'five-hundred-px-service';
       }
+
+      fetch() {
+        return new Promise(resolve => {
+          this.worker.onmessage = (event) => resolve(event.data);
+          this.worker.postMessage('fetch');
+        });
+      }
+
+      ready() {
+        super.ready();
+        this.worker = new Worker(this.resolveUrl('five-hundred-px-service-worker.js'));
+      }
     }
 
     window.customElements.define(FiveHundredPxService.is, FiveHundredPxService);
   </script>
-</dom-module> -->
-
-<script src="five-hundred-px-service.js"></script>
+</dom-module>
