[image-details-view] Fixed slotted content styling (was ignored in Firefox)

--- a/src/test-pwa-app.html
+++ b/src/test-pwa-app.html
@@ -16,7 +16,7 @@
       paper-toast {
         font-size: 1em;
       }
-      paper-toast > paper-button {
+      paper-toast paper-button {
         color: #eeff41;
       }
 
