[main-fragment] fixed location URLs updates (bug in production)

--- a/src/test-pwa-app.html
+++ b/src/test-pwa-app.html
@@ -67,6 +67,8 @@
           this.$.splashFragment
         ];
 
+        this.$.mainFragment.basePath = window.location.pathname;
+
         this.fragments.forEach(item => {
           item.frame = this;
           item.style.display = 'none';
