--- a/src/core/services/five-hundred-px-service.html
+++ b/src/core/services/five-hundred-px-service.html
@@ -1,6 +1,11 @@
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../storages/five-hundred-px-storage.html">
 
 <dom-module id="five-hundred-px-service">
+  <template>
+    <five-hundred-px-storage id="storage"></five-hundred-px-storage>
+  </template>
+
   <script>
     class FiveHundredPxService extends Polymer.Element {
       static get is() {
@@ -9,7 +14,10 @@
 
       fetch() {
         return new Promise(resolve => {
-          this.worker.onmessage = (event) => resolve(event.data);
+          this.worker.onmessage = (event) => {
+            this.$.storage.items = event.data;
+            resolve();
+          };
           this.worker.postMessage('fetch');
         });
       }
